tests/error/misc_errors/tuple_index_out_of_bounds.py
from tests.util import compile_guppy

@compile_guppy
def foo() -> float:
    t = (1.0, 2.0)
    return t[10]
